<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="myModel"
            type="com.relaypickup.relaypickupandroid.models.CustomerInfoViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controllers.fragments.CustomerInfoFragment">

        <TextView
            android:id="@+id/textViewLastName"
            android:layout_width="70dp"
            android:layout_height="21dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/label_last_name"
            app:layout_constraintEnd_toStartOf="@+id/txtLastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtLastName" />

        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:inputType="textNoSuggestions"
            android:text="@={myModel.customerInfoFields.lastName}"
            app:customerInfoError="@{myModel.customerInfoFields.lastNameError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:customerInfoOnFocus="@{myModel.getLastNameOnFocusChangeListener()}" />

        <TextView
            android:id="@+id/textViewFirstName"
            android:layout_width="70dp"
            android:layout_height="21dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/label_first_name"
            app:layout_constraintEnd_toStartOf="@+id/txtFirstName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtFirstName" />

        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:inputType="textNoSuggestions"
            android:text="@={myModel.customerInfoFields.firstName}"
            app:customerInfoError="@{myModel.customerInfoFields.firstNameError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLastName"
            app:customerInfoOnFocus="@{myModel.getFirstNameOnFocusChangeListener()}" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="70dp"
            android:layout_height="21dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/label_email"
            app:layout_constraintEnd_toStartOf="@+id/txtEmail"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtEmail" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:inputType="textNoSuggestions|textEmailAddress"
            android:text="@={myModel.customerInfoFields.email}"
            app:customerInfoError="@{myModel.customerInfoFields.emailError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFirstName"
            app:customerInfoOnFocus="@{myModel.getEmailOnFocusChangeListener()}" />

        <TextView
            android:id="@+id/textAddress"
            android:layout_width="70dp"
            android:layout_height="18dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/label_address"
            app:layout_constraintEnd_toStartOf="@+id/txtAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtAddress" />

        <EditText
            android:id="@+id/txtAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:inputType="text"
            android:text="@={myModel.customerInfoFields.address}"
            app:customerInfoError="@{myModel.customerInfoFields.addressError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail"
            app:customerInfoOnFocus="@{myModel.getAddressOnFocusChangeListener()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>