<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controllers.fragments.ParcelInfoFragment">

    <data>

        <variable
            name="myModel"
            type="com.relaypickup.relaypickupandroid.models.ParcelInfoViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvWeightNumber"
            android:layout_width="70dp"
            android:layout_height="21dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/label_weight_number"
            app:layout_constraintEnd_toStartOf="@+id/txtWeightNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtWeightNumber" />

        <EditText
            android:id="@+id/txtWeightNumber"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:inputType="textNoSuggestions"
            android:text="@={myModel.parcelInfo.weightNumber}"
            app:parcelInfoError="@{myModel.parcelInfo.weightNumberError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:parcelInfoOnFocus="@{myModel.getWeightNumberOnFocusChangeListener()}" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="70dp"
            android:layout_height="21dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/label_parcel_category"
            app:layout_constraintEnd_toStartOf="@+id/txtCategory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtCategory" />

        <EditText
            android:id="@+id/txtCategory"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:inputType="textNoSuggestions"
            android:text="@={myModel.parcelInfo.category}"
            app:parcelInfoError="@{myModel.parcelInfo.categoryError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtWeightNumber"
            app:parcelInfoOnFocus="@{myModel.getCategoryOnFocusChangeListener()}" />

        <TextView
            android:id="@+id/tvDeliveryMode"
            android:layout_width="70dp"
            android:layout_height="21dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/label_delivery_mode"
            app:layout_constraintEnd_toStartOf="@+id/txtDeliveryMode"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtDeliveryMode" />

        <EditText
            android:id="@+id/txtDeliveryMode"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:inputType="textNoSuggestions|textEmailAddress"
            android:text="@={myModel.parcelInfo.deliveryMode}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCategory" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>